<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
    android:id="@+id/input_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4sp"
    android:textColor="@color/black" />

    <EditText
        android:id="@+id/input_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/subtractBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/divBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/divide" />

    <Button
        android:id="@+id/multiplyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/multiply" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

</LinearLayout>